# codex

./: .dockerignore  vorpal_cli_README.md  vorpal_sync.md
codex-rs/: Cargo.toml  README.md  justfile
codex-rs/arg0/src/: lib.rs
codex-rs/chatgpt/src/: apply_command.rs  chatgpt_client.rs  chatgpt_token.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: login.rs  main.rs  mcp_cmd.rs  proto.rs
codex-rs/cli/tests/: execpolicy.rs  features.rs  mcp_add_remove.rs  mcp_list.rs
codex-rs/codex-api/src/: provider.rs
codex-rs/codex-api/tests/: clients.rs  models_integration.rs  realtime_websocket_e2e.rs  sse_end_to_end.rs
codex-rs/common/src/: config_override.rs
codex-rs/core/: Cargo.toml  README.md  config.schema.json
codex-rs/core/src/: api_bridge.rs  auth.rs  azure_auth.rs  client.rs  codex.rs  config.rs  config_edit.rs  config_types.rs  custom_prompts.rs  lib.rs  mcp_connection_manager.rs  message_history.rs  model_provider_info.rs  project_doc.rs
codex-rs/core/tests/: chat_completions_payload.rs  chat_completions_sse.rs  responses_headers.rs
codex-rs/docs/: codex_mcp_interface.md
codex-rs/exec/src/: lib.rs
codex-rs/mcp-server/: Cargo.toml
codex-rs/mcp-server/src/: codex_message_processor.rs  codex_tool_config.rs  codex_tool_runner.rs  lib.rs  main.rs  message_processor.rs  redact.rs  session_log.rs
codex-rs/mcp-server/tests/common/: mcp_process.rs
codex-rs/mcp-server/tests/suite/: archive_conversation.rs  auth.rs  codex_message_processor_flow.rs  codex_tool.rs  config.rs  create_conversation.rs  interrupt.rs  list_resume.rs  login.rs  send_message.rs  set_default_model.rs  user_agent.rs  user_info.rs
codex-rs/protocol/: README.md
codex-rs/responses-api-proxy/: README.md
codex-rs/rmcp-client/: Cargo.toml
deployment/: Dockerfile  README.md  build-container.sh  codex_config.toml  entrypoint.sh  requirements.txt  start-services.sh  start-vorpal-app-server.sh  start-vorpal-proxy.sh  vorpal_container_az_login.sh  vorpal_container_no_login.sh
docs/: config.md  mcp_server_design.md
proxy/: README.md  pyproject.toml  requirements.txt  vorpal.html  vorpal_proxy.py
proxy/src/vorpal_proxy/: __main__.py  app.py  config.py  vorpal.html
(+69 files in other folders)
